--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
-    "@types/react-input-mask": "^3.0.6",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
@@ -22,7 +21,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
-    "react-input-mask": "^2.0.4",
+    "react-imask": "^7.6.1",
     "react-router-dom": "^7.9.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.18",
