--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
+    "react-datepicker": "^8.9.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-imask": "^7.6.1",
