--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "framer-motion": "^12.23.24",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
-    "react-calendar": "^6.0.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-imask": "^7.6.1",
