--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.65.0",
     "react-imask": "^7.6.1",
     "react-router-dom": "^7.9.4",
+    "stripe": "^14.25.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.18",
     "zod": "^4.1.12"
