--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@stripe/stripe-js": "^4.10.0",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
+    "busboy": "^1.6.0",
     "clsx": "^2.1.1",
+    "form-data": "^4.0.5",
     "framer-motion": "^12.23.24",
     "postcss": "^8.5.6",
     "react": "^19.2.1",
