--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
     "@netlify/blobs": "^10.4.3",
-    "@stripe/stripe-js": "^4.10.0",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.5.3",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "busboy": "^1.6.0",
