📅 Add daily Dev branch sync automation
Created automated script to pull from origin/Dev every weekday at 9:00 AM

Files:
- scripts/pull-dev-branch.sh: Sync script with logging
- scripts/com.acdw.pull-dev.plist: macOS LaunchAgent config
- DAILY-DEV-SYNC-SETUP.md: Setup instructions

Features:
- Automatic pull from origin/Dev at 9:00 AM Mon-Fri
- Logs all activity to .git-pull-log.txt
- Safe: Only pulls, never pushes
- Checks if on Dev branch before pulling
- Shows what changed after pull

Setup required on each developer's machine (see DAILY-DEV-SYNC-SETUP.md)

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,16 @@ dist-ssr
 # Non Essential Files
 **/*.md
 *.md
+# Allow workflow documentation
+!DEV-BRANCH-WORKFLOW.md
+!NETLIFY-BRANCH-DEPLOY-SETUP.md
+!DAILY-DEV-SYNC-SETUP.md
 scripts/
+# Allow sync scripts
+!scripts/pull-dev-branch.sh
+!scripts/com.acdw.pull-dev.plist
+# Git pull logs
+.git-pull-log.txt
+.git-pull-log-errors.txt
 
 S
