--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "@netlify/blobs": "^10.4.3",
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.5.3",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "busboy": "^1.6.0",
     "clsx": "^2.1.1",
     "form-data": "^4.0.5",
     "framer-motion": "^12.23.24",
     "postcss": "^8.5.6",
-    "react": "^19.2.3",
+    "react": "^19.2.1",
     "react-day-picker": "^9.11.1",
-    "react-dom": "^19.2.3",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.65.0",
     "react-imask": "^7.6.1",
     "react-router-dom": "^7.9.4",
