--- a/netlify.toml
+++ b/netlify.toml
@@ -30,8 +30,7 @@
     Referrer-Policy = "strict-origin-when-cross-origin"
     Permissions-Policy = "geolocation=(), microphone=(), camera=()"
     Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://www.google.com https://www.gstatic.com https://js.stripe.com https://*.clerk.accounts.dev https://player.vimeo.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://api.stripe.com https://www.google.com https://*.clerk.accounts.dev; frame-src https://js.stripe.com https://*.clerk.accounts.dev https://www.google.com https://player.vimeo.com; worker-src 'self' blob:;"
-    
+Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://www.google.com https://www.gstatic.com https://js.stripe.com https://*.clerk.accounts.dev https://player.vimeo.com https://challenges.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://api.stripe.com https://www.google.com https://*.clerk.accounts.dev https://challenges.cloudflare.com; frame-src https://js.stripe.com https://*.clerk.accounts.dev https://www.google.com https://player.vimeo.com https://challenges.cloudflare.com; worker-src 'self' blob:;"    
 [[headers]]
   for = "/assets/*"
   [headers.values]
